# TrendTags

./: .env.example  .flake8  .lgtm.yml  .semgrep.yml  CONTRIBUTING.md  README.md  app.py  config.py  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  codeql.yml  js-lint.yml  main.yml  python-app.yml  python-lint.yml  trivy.yml
src/: __init__.py  api_validator.py  config.py  errors.py  logger_utils.py  tag_processing.py  utilities.py
static/css/: style.css
static/js/: eslint.config.js  script.js
templates/: index.html
tests/: __init__.py  test_classes.py  test_remove_duplicate_tags.py
tests/integration/: test_api_key_validation.py
tests/unit/: test_api_validator.py  test_classes.py  test_tag_processing.py  test_utilities.py
