[project]
name = "trendtags"
version = "0.1.0"
description = "A platform to generate relevant tags"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "coverage==7.8.2",
    "flask==3.1.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "python-dotenv==0.19.0",
    "requests==2.32.3",
    "urllib3==2.4.0",
    "werkzeug==2.0.1",
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''