[project]
name = "trendtags"
version = "0.1.0"
description = "A platform to generate relevant tags"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
developer = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''
