[project]
name = "trendtags"
version = "0.1.0"
description = "A platform to generate relevant tags"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1,<4.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
]

[project.optional-dependencies]
developer = [
    "black>=25.1.0,<26.0.0",
    "flake8>=7.2.0,<8.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-html>=4.1.1,<5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''
